scrollbar fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,12 +4,13 @@
   }
   html {
     scroll-snap-type: y mandatory;
-    overflow: scroll;
   }
 body {
     background: rgb(5, 5, 5);
     color: #fff;
     height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
 }
 .container {
     height: 100%;
@@ -83,6 +84,6 @@ section h1 {
   }
   
   section#contact {
-    background: url("./images/meteors.png") no-repeat center center/cover;;
+    background: url("./images/comet.jpg") no-repeat center center/cover;;
   }
   
